--- a/docs/professor/mario_eduardo_de_barros_gomes_nunes_da_silva.mdx
+++ b/docs/professor/mario_eduardo_de_barros_gomes_nunes_da_silva.mdx
@@ -27,7 +27,21 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Manutenção Industrial",
+          size: 2,
+          teachers: [
+            "Mario Eduardo de Barros Gomes Nunes da Silva"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "ELM2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
