--- a/docs/sala/bloco_2/sala_13-2.mdx
+++ b/docs/sala/bloco_2/sala_13-2.mdx
@@ -136,7 +136,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Manutenção Industrial",
+          subject: "Elementos de Máquinas",
           size: 2,
           teachers: [
             "Darlan Roque Dapieve"
@@ -149,10 +149,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Elementos de Máquinas",
+          subject: "Manutenção Industrial",
           size: 2,
           teachers: [
-            "Darlan Roque Dapieve"
+            "Mario Eduardo de Barros Gomes Nunes da Silva"
           ],
           classroom: "Sala 13-2",
           students: [
