--- a/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_c_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_c_-_cr_toledo.mdx
@@ -36,6 +36,19 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
+        },
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          size: 2,
+          teachers: [
+            "Humberto Fioravante Ferro"
+          ],
+          classroom: "Laboratório de Informatica C - CR Toledo",
+          students: [
+            "IIW2025B"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
         }
       ]
     },
@@ -121,7 +134,21 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          size: 2,
+          teachers: [
+            "Humberto Fioravante Ferro"
+          ],
+          classroom: "Laboratório de Informatica C - CR Toledo",
+          students: [
+            "IIW2025B"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
