--- a/docs/sala/bloco_cr_ifpr-biopark/quadra_de_esportes_-_biopark.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/quadra_de_esportes_-_biopark.mdx
@@ -1,33 +1,47 @@
 ---
-description: Humberto Fioravante Ferro
+slug: /sala/quadra_de_esportes_-_biopark
+description: Quadra de Esportes - Biopark
 ---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Humberto Fioravante Ferro",
-  base: "",
+  title: "Quadra de Esportes - Biopark",
+  base: "Bloco CR IFPR-Biopark",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          subject: "Educação Física I",
           size: 2,
           teachers: [
-            "Humberto Fioravante Ferro"
+            "Kleber Augusto Michalichem"
           ],
-          classroom: "Laboratório de Informatica C - CR Toledo",
+          classroom: "Quadra de Esportes - Biopark",
           students: [
             "IIW2025B"
           ],
           time: "13:10 - 14:00",
           color: ""
+        },
+        {
+          subject: "Educação Física II",
+          size: 2,
+          teachers: [
+            "Kleber Augusto Michalichem"
+          ],
+          classroom: "Quadra de Esportes - Biopark",
+          students: [
+            "IIW2024B"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
         }
       ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
@@ -39,21 +53,7 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
-          size: 2,
-          teachers: [
-            "Humberto Fioravante Ferro"
-          ],
-          classroom: "Laboratório de Informatica C - CR Toledo",
-          students: [
-            "IIW2025B"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
@@ -117,7 +117,7 @@ export const data = {
   alert: ""
 }
 
-# Humberto Fioravante Ferro
+# Quadra de Esportes - Biopark
 
 <div>
   {
