--- a/docs/turma/elm/elm2024.mdx
+++ b/docs/turma/elm/elm2024.mdx
@@ -43,7 +43,7 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Manutenção Industrial",
+          subject: "Elementos de Máquinas",
           size: 2,
           teachers: [
             "Darlan Roque Dapieve"
@@ -56,10 +56,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Elementos de Máquinas",
+          subject: "Manutenção Industrial",
           size: 2,
           teachers: [
-            "Darlan Roque Dapieve"
+            "Mario Eduardo de Barros Gomes Nunes da Silva"
           ],
           classroom: "Sala 13-2",
           students: [
