--- a/docs/turma/iiw/iiw2024b.mdx
+++ b/docs/turma/iiw/iiw2024b.mdx
@@ -152,7 +152,7 @@ export const data = {
           teachers: [
             "Kleber Augusto Michalichem"
           ],
-          classroom: "Sala 04 - CR Toledo",
+          classroom: "Quadra de Esportes - Biopark",
           students: [
             "IIW2024B"
           ],
