--- a/docs/turma/iiw/iiw2025b.mdx
+++ b/docs/turma/iiw/iiw2025b.mdx
@@ -51,12 +51,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Educação Física I",
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 04 - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2025B"
           ],
@@ -147,12 +147,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          subject: "Educação Física I",
           size: 2,
           teachers: [
-            "Humberto Fioravante Ferro"
+            "Kleber Augusto Michalichem"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Quadra de Esportes - Biopark",
           students: [
             "IIW2025B"
           ],
@@ -297,7 +297,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2025B"
           ],
