--- a/docs/professor/kleber_augusto_michalichem.mdx
+++ b/docs/professor/kleber_augusto_michalichem.mdx
@@ -23,19 +23,6 @@ export const data = {
           ],
           time: "08:20 - 09:10",
           color: ""
-        },
-        {
-          subject: "Educação Física I",
-          size: 2,
-          teachers: [
-            "Kleber Augusto Michalichem"
-          ],
-          classroom: "Sala 04 - CR Toledo",
-          students: [
-            "IIW2025B"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
         }
       ]
     },
@@ -85,12 +72,25 @@ export const data = {
           color: ""
         },
         {
+          subject: "Educação Física I",
+          size: 2,
+          teachers: [
+            "Kleber Augusto Michalichem"
+          ],
+          classroom: "Quadra de Esportes - Biopark",
+          students: [
+            "IIW2025B"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
           subject: "Educação Física II",
           size: 2,
           teachers: [
             "Kleber Augusto Michalichem"
           ],
-          classroom: "Sala 04 - CR Toledo",
+          classroom: "Quadra de Esportes - Biopark",
           students: [
             "IIW2024B"
           ],
