--- a/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_b_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_b_-_cr_toledo.mdx
@@ -93,19 +93,6 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
-        },
-        {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
-          size: 2,
-          teachers: [
-            "Humberto Fioravante Ferro"
-          ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
-          students: [
-            "IIW2025B"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
         }
       ]
     },
@@ -160,21 +147,7 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
-          size: 2,
-          teachers: [
-            "Humberto Fioravante Ferro"
-          ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
-          students: [
-            "IIW2025B"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
